--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "dev": "concurrently --kill-others-on-fail \"npm run client\" \"npm run server\"",
     "client:build": "cd client && npm run build"
   },
+  "engines": {
+    "node": "14.15.1",
+    "npm": "6.14.8"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/conor-deegan/web-app-boilerplate.git"
