--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "express-session": "^1.17.2",
     "express-sessions": "^1.0.6",
     "husky": "^4.2.5",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
-    "react-bootstrap": "^1.6.0"
+    "react-bootstrap": "^1.6.0",
+    "sequelize": "^6.6.2",
+    "uuid": "^8.3.2"
   }
 }
