--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-sessions": "^1.0.6",
+    "express-validator": "^6.11.1",
     "husky": "^4.2.5",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
