--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "^4.0.3",
     "react-validation": "^3.0.7",
     "validator": "^13.6.0",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "react-copy-to-clipboard": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
