--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "passport-local": "^1.0.0",
     "password-generator": "^2.3.2",
     "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-table-next": "^4.0.3",
