--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "react-bootstrap": "^1.6.0",
     "sequelize": "^6.6.2",
     "uuid": "^8.3.2"
