--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "react-validation": "^3.0.7",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.1",
-    "react-copy-to-clipboard": "^5.0.3"
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-bootstrap-icons": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
