--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pg-hstore": "^2.3.3",
     "react-bootstrap": "^1.6.0",
     "sequelize": "^6.6.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "faker": "^5.5.3"
   }
 }
